frontend/test/should_fail/cast_001.grg
using attrib_model_001, enum_model_001;

rule r {
	x: NINT;
	k: A;

	modify {
		eval {
			k.e = (te) x.a;
		}
	}
}
